--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "script.js",
   "scripts": {
     "start": "parcel src/index.html ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "jsdoc":"npx jsdoc -c jsdoc.json"
   },
   "keywords": [],
   "author": "",
